Fixed bug #29008 (array_combine() does not handle non-numeric/string keys).